--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lucide-react": "^0.544.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-paginate": "^8.3.0",
     "tailwindcss": "^4.0.6"
   },
   "devDependencies": {
@@ -32,6 +33,7 @@
     "@types/node": "^22.10.2",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
+    "@types/react-paginate": "^7.1.4",
     "@vitejs/plugin-react": "^5.0.4",
     "eslint": "^9.36.0",
     "eslint-config-prettier": "^10.1.8",
@@ -39,8 +41,8 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
-    "prettier": "^3.6.2",
     "jsdom": "^27.0.0",
+    "prettier": "^3.6.2",
     "typescript": "^5.7.2",
     "typescript-eslint": "^8.45.0",
     "vite": "^7.1.7",
